--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <a href="index.html"><img src="images/logo-white.svg" alt="logo" class="logo"></a>
     </header>
     
-        <a href="#nav" class="nav-btn" data-state="inactive" alt="hamburger"><img src="images/hamburger.svg">Navigate</a>
+        <a href="#nav" class="nav-btn" data-state="inactive" alt="hamburger">Navigate</a>
     
     <nav class="nav-top">	
             <ul>
