--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="index.html"><img src="images/logo-white.svg" alt="logo" class="logo"></a>
     </header>
 
-    <a href="#nav" class="nav-btn" data-state="inactive"><img src="images/hamburger.svg" alt="hamburger">Navigate</a>
+    <a href="#nav" class="nav-btn" data-state="inactive">Navigate</a>
     
     <nav class="nav-top">	
             <ul>
