--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
             <a href="about.html">
                 <figure>
                     <img src="images/satin.jpg" alt="About">
-                    <figcaption class="bucket-links">About</figcaption>
+                    <figcaption >About</figcaption>
                 </figure>
             </a>
 
             <a href="products.html">
                 <figure>
                     <img src="images/suit.jpg" alt="Suits">
-                    <figcaption class="bucket-links">Suits</figcaption>
+                    <figcaption>Suits</figcaption>
                 </figure>
             </a>
 
