--- a/about.html
+++ b/about.html
@@ -28,9 +28,7 @@
     </header>
     
     <div class="billboard-about">
-        <div class="headline-about">
-            <h1 class="h1about">A Terrific Team</h1>
-        </div>
+            <h1>A Terrific Team</h1>
     </div>
     
     <article>
