--- a/products.html
+++ b/products.html
@@ -28,8 +28,7 @@
     </header>
     
     <div class="billboard-suits">
-        <div class="headline-suits">
-            <h1 class="h1suits">Perfect Pairings</h1>
+            <h1>Perfect Pairings</h1>
         </div>
     </div>
    
